<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">FRC Notebook</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_year">2015</string>
    <string name="license_label">Open Source Licenses</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_update_event">Refresh</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_tba">View on TBA</string>

    <!-- Download Event Activity -->
    <string name="title_activity_event_download">Download Event Info</string>
    <string name="download_event_title">Select an Event</string>

    <!-- Start Activity -->
    <string name="title_activity_start">FRC Notebook</string>
    <string name="select_event_title">Select an Event</string>
    <string name="download_event_button">Download Info For An Event</string>
    <string name="no_events_message">No events. Click the plus button above to get started</string>
    <string name="no_events_this_week_message">No stored events competing this week. Click the plus button above to download data for an event</string>
    <string name="delete_event_message">Are you sure you want to delete </string>
    <string name="view_all_notes_message">All Events</string>

    <string-array name="event_list_navi_options">
        <item>All Events</item>
        <item>Competing Now</item>
    </string-array>

    <!-- Team List -->
    <string name="title_activity_view_event">View Event</string>
    <string name="action_add_matches">Add Matches from URL</string>
    <string name="title_add_matches">Match Source URL</string>
    <string name="teams_attending_header">Teams Attending</string>
    <string name="team_fetch_error">Error getting teams from database</string>

    <string-array name="team_list_sort_options">
        <item>Sort by team number</item>
        <item>Sort by number of notes (ascending)</item>
        <item>Sort by number of notes (descending)</item>
    </string-array>

    <!-- Match Schedule -->
    <string name="match_schedule_header">Match Schedule</string>

    <string-array name="match_sort_options">
        <item>Sort by Match Number</item>
        <item>Sort by Number of Notes Ascending</item>
        <item>Sort by Number of Notes Descending</item>
    </string-array>

    <!-- View Team -->
    <string name="title_activity_view_team">View Team</string>
    <string name="new_general_note">New General Note</string>
    <string name="add_note_button">Add Note</string>
    <string name="general_notes_header">General Notes</string>
    <string name="match_notes_header">Match Notes</string>
    <string name="no_notes">No notes yet</string>
    <string name="note_deletion_message">Are you sure you want to delete this note?</string>

    <!-- Match List -->
    <string name="qual_match_header">Qualification Matches</string>
    <string name="elim_match_header">Elimination Matches</string>

    <!-- View Match -->
    <string name="title_activity_view_match">View Match</string>
    <string name="match_title_placeholder">Match Title</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="red_score">Red Score</string>
    <string name="blue_score">Blue Score</string>
    <string name="no_teams">No teams yet</string>
    <string name="team_notes_header">Team Notes</string>
    <string name="no_team_selected">No Team Selected</string>
    <string name="no_team_notes">No notes for this team</string>
    <string name="prevous_match_button">Previous Match</string>
    <string name="next_match_button">Next Match</string>
    <string name="action_update_match">Refresh</string>
    <string name="action_add_note">Add Note</string>
    <string name="match_time">Match Time</string>

    <!-- Add Note Dialog -->
    <string name="add_note_title">Add a Note</string>
    <string name="add_note_message">Select a team</string>
    <string name="note_hint">Add your note</string>
    <string name="all_teams">All teams</string>
    <string name="generic_note">General Note</string>

    <!-- Edit Note Dialog -->
    <string name="edit_note_team_title">Note on Team </string>
    <string name="edit_note_generic_title">Edit Note</string>

    <!-- Field Monitor -->
    <string name="title_activity_field_monitor">Field Monitor</string>

    <!-- Delete Dialog -->
    <string name="delete_title">Confirm Deletion</string>

    <!-- License Dialog -->
    <string name="license_title">Open Source License</string>

    <!-- Predefined Notes -->
    <string name="title_activity_predefined_note_manager">Predefined Notes</string>
    <string name="action_new_predef_note">Add</string>
    <string name="delete_predef_note_message">Are you sure you want to delete this predefined note?</string>
    <string name="no_predef_notes">You don\'t have any predefined notes yet. Tap the plus in the action bar to add one</string>

    <!-- Add Event Dialog -->
    <string name="action_create_event">Create Unofficial Event</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="action_add_event">Add Event</string>
    <string name="property_event_title">Event Title</string>
    <string name="property_event_short">Short Event Title</string>
    <string name="property_event_key">Event Key</string>
    <string name="property_event_start">Start Date</string>
    <string name="property_event_end">End Date</string>
    <string name="property_teams_attending">Teams Attending\n(comma separated list, optional)</string>
    <string name="property_matches">Match Schedule URL (optional)</string>
    
    <!-- Collaborators -->
    <string name="title_activity_collaborators">Collaborators Activity</string>
    <string name="action_add_collaborator">Add Collaborator</string>

</resources>