<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plnyyanks.frcnotebook.activities.ViewMatch"
    tools:ignore="MergeRootFrame">

    <TextView style="@style/activity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/match_title_placeholder"
        android:id="@+id/match_title"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/ic_action_previous_item_light"
        android:onClick="previousMatch"
        android:id="@+id/prev_match" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_action_next_item_light"
        android:onClick="nextMatch"
        android:id="@+id/next_match" />

    <TextView style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/field_monitor_link"
        android:text="@string/title_activity_field_monitor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/match_title"
        android:id="@+id/generic_notes"></ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/generic_notes"
        android:layout_above="@id/prev_match"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/alliance_container"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                style="@style/text_super_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_alliance"
                android:id="@+id/red_header"
                android:textColor="@android:color/holo_red_dark"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/red_header"
                android:text="@string/red_score"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/red_score"
                android:textColor="@android:color/holo_red_dark"
                android:layout_alignParentRight="true" />

            <ExpandableListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/red_score"
                android:layout_alignParentRight="true"
                android:id="@+id/red_teams">
            </ExpandableListView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <TextView
                style="@style/text_super_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue_alliance"
                android:id="@+id/blue_header"
                android:textColor="#FF0000FF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/blue_header"
                android:text="@string/blue_score"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/blue_score"
                android:textColor="#FF0000FF" />

            <ExpandableListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/blue_score"
                android:id="@+id/blue_teams">
            </ExpandableListView>
        </RelativeLayout>
    </LinearLayout>
    <ProgressBar style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/match_loading_progress"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>
